--- a/blog/2023-03-07-purpose.md
+++ b/blog/2023-03-07-purpose.md
@@ -1,7 +1,9 @@
 ---
 slug: introduction-cod
 title: Website Purpose
-authors: lobo
+authors: 
+- lobo
+tags: [purpose, cod]
 ---
 
 Welcome to TGE's Code of Conduct website!
